  - Arithmetic optimizations (by mtsamis)
  - Small performance enhancement in the Island class (by mtsamis)
  - Memory footprint improvements (by mtsamis)
  - AABB unpack and performance enhancements (by mtsamis)
  - New LazyAABBTree broadphase detector (by mtsamis)
  - New BruteForceBroadphase detector (by mtsamis)
  - Geometry optimizations (by mtsamis)
  - Dynamics optimizations (by mtsamis)

Bug Fixes:
  - Bug fix for HalfEllipse.getRadius(Vector2) when the half width < half
    height and the given point is below the evolute.
  - Bug fix for the initial transform not updating if CCD is turned off
  - Bug fix for strange code in position solver
  - Bug fix for wrong raycast results when using vertical segment/link shapes
  - Bug fix for Polygon.contains when the given point is coincident with
  	an edge of the polygon
  - Bug fixes for the SweepLine algorithm where it would produce incorrect
  	results
  - Fix for a small bug in the BroadphaseKey equals method
  - Fix for Wound.getVertexIterator and Wound.getNormalIterator methods
    to ensure all array elements are returned
  - Fix for NPE in SweepLine w/ detection of crossing edges and degenerate
    simple polygons throwing IllegalArgumentException
  - Fixes for the DivideAndConquer, GiftWrap, and GrahamScan convex hull
    generation algorithms for colinear and coincident points and for 
    precision loss
    
Deprecated:
  
Breaking Changes:
  - double getRotation() methods were replaced with Rotation getRotation()
    methods. Use the getRotationAngle() method instead.
  - The Polygon class now checks for degenerate (zero area) polygons and
    throws an IllegalArgumentException when detected
  
Other:
  - Updated broadphase tests (by mtsamis)

===============================================================================
Version 3.3.0
===============================================================================
New Features:
  - Performance improvements for Android